add FreelancersHubUserDetails and FreelancersHubUserDetailsService