@@ -1,8 +1,6 @@
 package org.shjwfan.security.core.userdetails;
 
 import java.time.Instant;
-import java.util.Collection;
-import java.util.Collections;
 import java.util.Set;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
@@ -10,11 +8,11 @@ import org.apache.commons.lang3.builder.EqualsBuilder;
 import org.apache.commons.lang3.builder.HashCodeBuilder;
 import org.shjwfan.security.core.FreelancersHubAuthority;
 import org.springframework.security.core.GrantedAuthority;
-import org.springframework.security.core.userdetails.UserDetails;
 
-public class ConfigurationPropertiesUserDetails implements UserDetails {
+public class ConfigurationPropertiesUserDetails implements FreelancersHubUserDetails {
 
-  private Set<? extends GrantedAuthority> authorities = Collections.emptySet();
+  private String email = "";
+  private Set<? extends GrantedAuthority> authorities = Set.of();
   private String password = "";
   private String username = "";
   private Instant accountExpiredAt = Instant.MAX;
@@ -23,13 +21,22 @@ public class ConfigurationPropertiesUserDetails implements UserDetails {
   private boolean enabled = false;
 
   @Override
-  public Collection<? extends GrantedAuthority> getAuthorities() {
+  public String getEmail() {
+    return email;
+  }
+
+  public void setEmail(String email) {
+    this.email = email;
+  }
+
+  @Override
+  public Set<? extends GrantedAuthority> getAuthorities() {
     return authorities;
   }
 
   public void setAuthorities(String authorities) {
     String[] values = authorities.split(",");
-    this.authorities = Stream.of(values).map(value -> FreelancersHubAuthority.valueOf(value)).collect(Collectors.toSet());
+    this.authorities = Stream.of(values).map(value -> FreelancersHubAuthority.valueOf(value)).collect(Collectors.toUnmodifiableSet());
   }
 
   @Override
@@ -97,11 +104,11 @@ public class ConfigurationPropertiesUserDetails implements UserDetails {
       return false;
     }
     ConfigurationPropertiesUserDetails user = (ConfigurationPropertiesUserDetails) o;
-    return new EqualsBuilder().append(username, user.username).isEquals();
+    return new EqualsBuilder().append(email, email).append(username, user.username).isEquals();
   }
 
   @Override
   public int hashCode() {
-    return new HashCodeBuilder(17, 37).append(username).toHashCode();
+    return new HashCodeBuilder(17, 37).append(email).append(username).toHashCode();
   }
 }
